<resources>
    <string name="app_name">BOOKLAND</string>
    <string name="name">Home</string>
    <string name="adventure">ADVENTURE</string>
    <string name="novel">NOVEL</string>
    <string name="education">EDUCATION</string>
    <string name="biography">BIOGRAPHY</string>
    <string name="children">CHILDREN</string>
    <string name="magazines">MAGAZINES</string>

    <string name="adventure_book">ADVENTURE</string>
    <string name="search">Search</string>
    <string name="button1_view">VIEW</string>
    <string name="button2_view">VIEW</string>
    <string name="button3_view">VIEW</string>
    <string name="button4_view">VIEW</string>
    <string name="button5_view">VIEW</string>
    <string name="button6_view">VIEW</string>

    <string name="book_name">Book Name</string>
    <string name="price">Book Price</string>
    <string name="description">Description</string>
    <string name="bookName">The Adentures Of Robin Hood</string>
    <string name="book_price">Rs.850/=</string>
    <string name="book_description">Robin Hood is a legendary heroic outlaw originally depicted in English
                         folklore and subsequently featured in literature and film. According to
                        legend, he was a highly skilled archer and swordsman.</string>
    <string name="button_buy">Buy Now</string>
    <string name="button_cart">Add To Cart</string>

    <string name="Add_New_Book"> + Add New Book</string>
    <string name="View_adventure">  Adventure</string>
    <string name="View_Novel"> Novel</string>
    <string name="Edit1">EDIT</string>
    <string name="Edit2">EDIT</string>
    <string name="Edit3">EDIT</string>
    <string name="Delete1">DELETE</string>
    <string name="Delete2">DELETE</string>
    <string name="Delete3">DELETE</string>

    <string name="Add_book">Add Book</string>
    <string name="new_book_name">Book Name</string>
    <string name="new_book_price">Price</string>
    <string name="new_book_description">Description</string>
    <string name="new_book_Category">Category</string>
    <string name="Add_Image">Add Image</string>
    <string name="Save">Save</string>

    <string name="Edit_book">Edit Book</string>
    <string name="edit_book_name">LORD OF THE RING</string>
    <string name="edit_book_price">Rs.1500/=</string>
    <string name="edit_book_description">Description</string>
    <string name="edit_book_Category">Adventure</string>
    <string name="edit_Image">Edit Image</string>
    <string name="edit">Save</string>
    <string name="theme_name">KEEP READING ,ENJOY THE MOMENT</string>
    <string name="select_login">Already have an Account ? LOGIN</string>
    <string name="select_join_now">Join Now</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="remeber_me">remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="admin">I am an Admin?</string>
    <string name="not_admin">I am not an Admin</string>
    <string name="reg_username">Username</string>
    <string name="reg_password">Password</string>
    <string name="reg_phone">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="input_phoneno">Phone number</string>
    <string name="logout_btn">Logout</string>

    <string-array name="category_array">
        <item>Category</item>
        <item>ADVRNTURE</item>
        <item>NOVEL</item>
        <item>MAGAZINES</item>
        <item>CHILDREN</item>
        <item>EDUCATION</item>
        <item>BIOGRAPHY</item>

    </string-array>

    <string name="topic">topic</string>
    <string name="txt_topic">COURIER LOGIN</string>
    <string name="username">Username</string>
    <string name="pw">Password</string>
    <string name="remember">Remember me</string>
    <string name="psw">Password</string>
    <string name="password">Password</string>
    <string name="button1">Cash on Delivery</string>
    <string name="button2">Card</string>
    <string name="button3">Cash on delivery</string>
    <string name="button4">Card</string>
    <string name="order1">Order 1</string>
    <string name="button5">Details</string>
    <string name="order2">Order 2</string>
    <string name="button6">DETAILS</string>
    <string name="order3">Order 3</string>
    <string name="button7">DETAILS</string>
    <string name="details1">DETAILS</string>
    <string name="Nname">Name     :</string>
    <string name="address">Address     :</string>
    <string name="Quantity">Quantity    :</string>
    <string name="phone">Email Address  :</string>
    <string name="nm">Ruwani</string>
    <string name="add">112/2,Nipuni,Kandy</string>
    <string name="qty">5</string>
    <string name="contact">0771234568</string>
    <string name="textView15">Nipuni</string>
    <string name="mail">ruvi@gmail.com</string>
    <string name="Pprice">Price     :</string>
    <string name="pp">Rs.20,000.00</string>
    <string name="fogot">Fogot password?</string>
    <string name="qtty">10</string>
    <string name="size">5</string>
    <string name="tel">Contact Number:</string>
    <string name="telno">0771234568</string>
    <string name="no">0771234568</string>
    <string name="cname">Your Name     :</string>
    <string name="nname">Kavindi</string>
    <string name="email">your Email :</string>
    <string name="maila">kavindi@gmail.com</string>
    <string name="pn">Phone Number :</string>
    <string name="pno">0712354645</string>
    <string name="Eedit">Edit My Profile</string>
    <string name="delete">Delete My Profile</string>
    <string name="editp">Edit Profile</string>
    <string name="yn">Your Name  :</string>
    <string name="ye">Your Email  :</string>
    <string name="phn">Phone Number  :</string>
    <string name="pname">Kumudu</string>
    <string name="buttonsv">Save</string>
    <string name="sv">Save</string>
    <string name="deleteview">Your Profile has
        been Deleted</string>
    <string name="hello">0771236548</string>
    <string name="deliveryd">Delivery Details</string>
    <string name="dn">Driver Name</string>
    <string name="rd">Route Details</string>
    <string name="d1">Kamal :</string>
    <string name="dd1">Colombo-Matara</string>
    <string name="dn2">Nimal :</string>
    <string name="dd2">Colombo-Galle</string>
    <string name="dn3">Saman :</string>
    <string name="dd3">Colombo-Kandy</string>
    <string name="editroute">Edit Route Details</string>
    <string name="deleteroute">Delete Route Details</string>
    <string name="rdelete">Route Details has been Deleted</string>
    <string name="editrd">Edit Route Details</string>
    <string name="editn" />
    <string name="savebt">Save</string>
    <string name="login">LOGIN</string>
    <string name="Password">editTextTextPassword</string>
    <string name="PW">Password</string>

</resources>


