<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_15"
    tools:context=".orders">

    <Button
        android:id="@+id/button3"
        android:layout_width="199dp"
        android:layout_height="81dp"
        android:text="@string/button3"
        android:textColorHighlight="@color/teal_700"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="175dp"
        android:layout_height="79dp"
        android:text="@string/button4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order1"
        android:layout_width="116dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="279dp"
        android:text="@string/order1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="135dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button5"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="232dp" />

    <TextView
        android:id="@+id/order2"
        android:layout_width="122dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="279dp"
        android:text="@string/order2"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="327dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="123dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="457dp" />

    <TextView
        android:id="@+id/order3"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:text="@string/order3"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="569dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="714dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="187dp"
        android:layout_height="114dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="212dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image_16"
        tools:layout_editor_absoluteY="190dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="211dp"
        android:layout_height="152dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image_17"
        tools:layout_editor_absoluteY="383dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="231dp"
        android:layout_height="161dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image_18" />

</androidx.constraintlayout.widget.ConstraintLayout>