<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_15"
    tools:context=".CashOnDelivery_Details">

    <TextView
        android:id="@+id/name"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/add"
        android:layout_width="236dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="33dp"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/address" />

    <TextView
        android:id="@+id/details1"
        android:layout_width="374dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/details1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details1"
        app:srcCompat="@drawable/image_6" />

    <TextView
        android:id="@+id/address"
        android:layout_width="149dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="33dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Quantity"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Quantity"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="34dp"
        android:text="@string/Quantity"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tel"
        app:layout_constraintEnd_toStartOf="@+id/size"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/textView13"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/name" />

    <TextView
        android:id="@+id/size"
        android:layout_width="194dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="34dp"
        android:text="@string/size"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Quantity" />

    <TextView
        android:id="@+id/tel"
        android:layout_width="184dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="81dp"
        android:text="@string/tel"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hello"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="81dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tel" />

</androidx.constraintlayout.widget.ConstraintLayout>